--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@types/react-dom": "^18.2.6",
     "@types/react-scroll": "^1.8.7",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.4.0",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "styled-components": "^6.0.0-rc.5",
